--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,9 @@
     Margin:0;
     padding:0;
  }
-
+body{
+    background-color: #FDF0D5;
+}
 header {
     display: flex;
     align-items: left;
@@ -10,7 +12,7 @@ header {
     position: sticky;
     top:0;
     z-index: 1;
-    background-color: #D8E9A8;
+    background-color: #FDF0D5
 }
 
 .logo-mate{
@@ -38,7 +40,7 @@ header {
 
 /*cambio de color en la letra*/
 .lista-navegacion li a {
-    color: #191A19;
+    color: #899878;
     text-decoration: none; 
 }  
 
@@ -68,24 +70,48 @@ header {
     display: block;
     width: 200px;
     height: 200px;
-    margin: 10%;
+    margin: 10%;    
+    border-radius: 20px;
 }
 
 /*IMAGEN PRODUCTO*/
-.card__imagenP{
+/*.card__imagenP{
     width: 200px;
     height: 200px;
-    margin: 10%;
-    
+    width: 350px;
+    height: 250px;
+    left: 77px;
+    margin: 10%;    
+    border-radius: 20px;
+}*/
+.card__imagenCalabaza{
+    width: 295px;
+    height: 425px;
+}
+.card__imagenAcc{
+    width: 295px;
+    height: 425px;
+}
+.card__imagenTor{
+    width: 295px;
+    height: 425px;
+}
+.card__imagenMt{
+    width: 295px;
+    height: 425px;
+}
+.card__imagenMi{
+    width: 295px;
+    height: 425px;
 }
 .card {
-    background-color: #6D9886;
+    background-color: #E4E6C3;
     margin-top: 80px;
     padding: 1rem;
 }
 
 .cardProducto{
-    background-color: #6D9886;
+    background-color: #E4E6C3;
     margin-top: 80px;
     padding: 1rem;
 }
@@ -131,8 +157,9 @@ h1{
 
 /*footer*/
 .card__footer{
-    background-color: #D8E9A8;
-    height: 150px;
+    background-color: #899878;
+    width: 100%;
+    height: 70px;
     margin-top: 10%;
 }
 .whatsapp {
