cambios bootstrap en css

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ h1{
 
 /*footer*/
 .card__footer{
-    background-color: #899878;
+    background-color: #846C5B;
     width: 100%;
     height: 70px;
     margin-top: 10%;
