finalice los cambios del desafio aplicando bootstrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,17 +26,27 @@ header {
     font-weight:bolder;
     font-style:italic;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 7%;
     grid-area: texto;
 }
 
-.lista-navegacion li {
+/*.lista-navegacion li {
     list-style: none;
     display: inline-block;
     color: rgb(8, 8, 8);
     margin-right: 30px;
     font-size: 1.3rem;
+}*/
+
+.navbar{
+    list-style: none;
+    display: inline-block;
+    color: rgb(8, 8, 8);
+    font-size: 1rem;
+    
+
 }
+
 
 /*cambio de color en la letra*/
 .lista-navegacion li a {
@@ -54,6 +64,7 @@ header {
 .producto-carrousel{
     width: 100%;
     height: 500px;
+    margin-top: 100px;
     grid-area: foto;
 }
 
@@ -106,7 +117,7 @@ header {
 }
 .card {
     background-color: #E4E6C3;
-    margin-top: 80px;
+    margin-top: 160px;
     padding: 1rem;
 }
 
@@ -145,6 +156,7 @@ header {
 h1{
     animation-duration: 3.5s;
     animation-name: aparecer;
+    margin-top: 10%;
 }
 
 
@@ -255,6 +267,12 @@ header{
 }
 
 .title{
+    line-height: 2rem;  
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    margin-top: 7%;
+}
+.title1{
     line-height: 2rem;  
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
